--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Contact Information Request</title>
         <meta name="description" content="">
+        <title>Contact Information Request</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link
             rel="stylesheet"
@@ -12,7 +12,7 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
