pages link to eachother through nav & other small changes

--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link active" href="#">About Me <span class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link" href="#">Portfolio</a>
-                  <a class="nav-item nav-link" href="#">Contact</a>
+                  <a class="nav-item nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                  <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                  <a class="nav-item nav-link" href="contact.html">Contact</a>
                 </div>
-              </div>
-            </nav>
+            </div>
+        </nav>
                 
         <div class="jumbotron">
             <h1 class="display-4">About Me</h1>
             <hr class="my-4">
             <img src="https://www.fillmurray.com/300/200" alt="Bill Murray" />
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, officiis omnis labore repellat consequuntur similique beatae recusandae dolores explicabo culpa dignissimos pariatur nihil sint fuga error ea architecto ad perspiciatis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, officiis omnis labore repellat consequuntur similique beatae recusandae dolores explicabo culpa dignissimos pariatur nihil sint fuga error ea architecto ad perspiciatis.</p>
           </div>
 
 
