--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
         />
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Sam Sherrill</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-item nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                  <a class="nav-item nav-link" href="contact.html">Contact</a>
-                </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Sam Sherrill</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-item nav-link" href="contact.html">Contact</a>
             </div>
-        </nav>
+        </div>
+    </nav>
+
+    <body class="container">
+
                 
         <div class="jumbotron">
             <h1 class="display-4">About Me</h1>
