Profile pic saved in repo folder, added to index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="jumbotron">
             <h1 class="display-4">About Me</h1>
             <hr class="my-4">
-            <img src="https://www.fillmurray.com/300/200" alt="Bill Murray" />
+            <img class="profile-pic" src="./Images/portfolio-images/sam-sherrill-profile-pic.jpg" alt="Sam Sherrill" />
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, officiis omnis labore repellat consequuntur similique beatae recusandae dolores explicabo culpa dignissimos pariatur nihil sint fuga error ea architecto ad perspiciatis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, officiis omnis labore repellat consequuntur similique beatae recusandae dolores explicabo culpa dignissimos pariatur nihil sint fuga error ea architecto ad perspiciatis.</p>
           </div>
