nav bar partially matching example

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Sam Sherrill</a>
+    <strong class="nav-bar-name-background" href="#">Sam Sherrill</strong>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
         <h1 class="display-4">About Me</h1>
         <hr class="my-4">
         <img class="profile-pic" src="./Images/portfolio-images/sam-sherrill-profile-pic.jpg" alt="Sam Sherrill" />
-        
+
         <p>As a professional, I feel like I've always been one of the lucky ones who enjoys getting up for work
             everyday. I've been blessed to have flexibility to choose where & what I work on. As technology continues to
             advance, I get more excited about what I do.</p>
