Nav bar & jumbotron mostly matching assignment example across website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <strong class="nav-bar-name-background" href="#">Sam Sherrill</strong>
+    <a class="nav-bar-name-background" href="#">Sam Sherrill</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,6 @@
 </nav>
 
 <body class="container">
-
-
     <div class="jumbotron">
         <h1 class="display-4">About Me</h1>
         <hr class="my-4">
