--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
-        <title>Contact Information Request</title>
+        <title>Contact Sam Sherrill</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link
             rel="stylesheet"
@@ -16,7 +16,7 @@
     </head>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Sam Sherrill</a>
+        <a class="nav-bar-name-background" href="index.html">Sam Sherrill</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
