--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Portfolio</title>
+        <title>Sam's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link
@@ -15,15 +15,15 @@
     </head>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Sam Sherrill</a>
+        <a class="nav-bar-name-background" href="./index.html">Sam Sherrill</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-item nav-link" href="contact.html">Contact</a>
+              <a class="nav-item nav-link" href="./index.html">About Me <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+              <a class="nav-item nav-link" href="./contact.html">Contact</a>
             </div>
         </div>
     </nav>
