all 3 pages now have the exact same styling. Projects need to be added.

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,24 @@
     </div>
 </nav>
 
-<body>
-
+<body class="container">
+    <div class="jumbotron">
+        <h1 class="display-4">Portfolio</h1>
+        <hr class="my-4">
+        <!-- These are probably going to be bootstrap components, maybe not in rows -->
+        <div class="row">
+            <div class="column"> Project 1 </div>
+            <div class="column"> Project 2 </div>
+        </div>
+        <div class="row">
+            <div class="column"> Project 3 </div>
+            <div class="column"> Project 4 </div>
+        </div>
+        <div class="row">
+            <div class="column"> Project 5 </div>
+            <div class="column"> There is no project 6 in this activity </div>
+        </div>
+    </div>
 </body>
 
 </html>
