--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 <body class="container">
   <div class="jumbotron">
-    <h1 class="display-4">Portfolio</h1>
+    <h1 class="display-4">Contact</h1>
     <hr class="my-4">
     <form>
       <div class="form-group">
