--- a/portfolio.html
+++ b/portfolio.html
@@ -30,23 +30,59 @@
     <div class="jumbotron">
         <h1 class="display-4">Portfolio</h1>
         <hr class="my-4">
-        <!-- These are probably going to be bootstrap components, maybe not in rows -->
+        
         <div class="row">
-            <div class="column"> Project 1 </div>
-            <div class="column"> Project 2 </div>
+            <div class="column">
+                <div class="card">
+                    <img src="./Images/portfolio-images/guess-the-word.png" class="card-img-top" alt="guess-the-word">
+                    <div class="card-body">
+                        <p class="card-text"> Word Guess </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="./Images/portfolio-images/Crono.png" class="card-img-top" alt="RPG Character">
+                    <div class="card-body">
+                        <p class="card-text"> RPG Game </p>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="row">
-            <div class="column"> Project 3 </div>
-            <div class="column"> Project 4 </div>
+            <div class="column">
+                <div class="card">
+                    <img src="./Images/portfolio-images/Trivial-Pursuit.png" class="card-img-top" alt="trivia game">
+                    <div class="card-body">
+                        <p class="card-text"> Trivia Game </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="./Images/portfolio-images/info-widget.jpg" class="card-img-top" alt="Widget">
+                    <div class="card-body">
+                        <p class="card-text"> Info Widget </p>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="row">
-            <div class="column"> Project 5 </div>
-            <div class="column"> There is no project 6 in this activity </div>
+            <div class="column">
+                <div class="card">
+                    <img src="./Images/portfolio-images/Rock-paper-scissors.png" class="card-img-top" alt="Rock Paper Scissors">
+                    <div class="card-body">
+                        <p class="card-text"> Rock Paper Scissors </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                
+            </div>
         </div>
     </div>
 </body>
 
 </html>
-
-<!-- https://www.linkedin.com/in/samuelsherrill/
-https://github.com/SamSherrill -->
